--- a/en/cleo-3/code-library.html
+++ b/en/cleo-3/code-library.html
@@ -46,7 +46,7 @@ Should I change my SASCM.INI? -------
 Sanny Builder 3 has the files SASCM.INI and OPCODES.TXT already up to date. Future updates of the CLEO library may require some changes of these files. You will get all instructions along with the updates on [cleo.sannybuilder.com](http://cleo.sannybuilder.com/). 
 
 :::right light gray p-2
-What about plugins? ------- <a id="plugins"></a>
+What about plugins? ------- [plugins][]
 :::
 
 The plugins are the DLL files having an extension .CLEO. At startup, the CLEO library scans the folder GTASA\CLEO for the files with that extension and tries to load them. If successful, the plugin begins to work and complete the functions it was made for.
@@ -69,6 +69,6 @@ The author of the CLEO library is [Seemann](http://www.gtaforums.com/index.php?s
 
 If you want to help in developing of the library or its plugins, contact me by forum or e-mail.
 
-Also thanks to [Stanislav Golovin (aka listener)](http://www.gtaforums.com/index.php?showuser=236130) for his support and useful information.
+Also thanks to [Stanislav Golovin](http://www.gtaforums.com/index.php?showuser=236130 "(aka listener)") for his support and useful information.
 
 <script src="../../js/main.min.js"></script>
