--- a/en/scm-documentation/sa/particles.html
+++ b/en/scm-documentation/sa/particles.html
@@ -8,11 +8,14 @@
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
+```sb3
+064B: 0@ = create_particle &lt;id&gt; at X Y Z type 1
+```
 <table>
 <thead>
 <tr>
 <th>Description</th>
-<th>Particle</th>
+<th>ID</th>
 </tr>
 </thead>
 <tbody>
@@ -106,7 +109,7 @@ const keys=[
 t+=
 "<tr>\
 <td>"+key[0]+"</td>\
-<td>\""+key[1]+"\"</td>\
+<td>"+key[1]+"</td>\
 </tr>"
 })
 $('tbody').innerHTML+=t
