--- a/en/version-history.html
+++ b/en/version-history.html
@@ -105,7 +105,7 @@ Read more on constants highlighting there: [Language service](editor/language-se
   * support for [custom IDE/DAT](edit-modes/#ide) files
   * "hot" reloading of modes configuration ([#15](https://github.com/sannybuilder/dev/issues/15))
   * increased available space for the mode name section ([#8](https://github.com/sannybuilder/dev/issues/8))
-* updated opcode definitions for LCS/VCS\*
+* updated opcode definitions for LCS/VCS*
 * removed SAMB to SB converter ([#27](https://github.com/sannybuilder/dev/issues/27))
 * fixed [file association](editor/options/general.md#file-association) ([#43](https://github.com/sannybuilder/dev/issues/43#issuecomment-670219723))
 * fixed a bug with LCS and VCS compilation ([#49](https://github.com/sannybuilder/dev/issues/49), [#0053](http://bugs.sannybuilder.com/view.php?id=53), [#0064](http://bugs.sannybuilder.com/view.php?id=64))
@@ -294,7 +294,7 @@ There is a [limit](coding/classes.md#properties) on using space characters in su
 * added new translations for the following languages: Finnish, Polish, Hungarian, Turkish, Ukrainian
 * the CLEO library updated to version 4.1.1.30f (CLEO 4 by Alien)
 * added a possibility to install CLEO for GTA III and Vice City (made by Alien)
-* opcode files (\*\*SCM.ini, opcodes.txt) replaced with the ones from the CLEO 4 library installation
+* opcode files (**SCM.ini, opcodes.txt) replaced with the ones from the CLEO 4 library installation
 * new [command line parameter](./#command-line-usage) `\nosplash`
 
 ## v. 3.04 - 17.08.2008
