--- a/es/coding/built-in-commands.html
+++ b/es/coding/built-in-commands.html
@@ -101,7 +101,7 @@ Div(1@)
 
 ## ALLOC 
 
-Esta función establece el desplazamiento de una variable global en el espacio de la [variable global](variables.md#global-variables) que existe al principio del encabezado `main.scm`
+Esta función establece el desplazamiento de una variable global en el espacio de la [variable global](variables.md#variables-globales) que existe al principio del encabezado `main.scm`
 
 Esto solo es significativo para las variables personalizadas (p.ej. `$text`) no definidas en `CustomVariables.ini`. Las variables DMA siempre obtienen su desplazamiento en función del número en sus nombres, p.ej la variable `$40` siempre ocupa cuatro bytes en el desplazamiento `160` (40*4).
 
