--- a/test/markdown/html.html
+++ b/test/markdown/html.html
@@ -26,7 +26,7 @@ if (!ache) {
 ```
 
 :::center p-2
-[Open Google](https://google.com "click me") | [Relogin `.MD`](index.md "MD transformed at HTML")
+[Open Google](https://google.com "click me") | [Relogin `.MD`](html.md "MD transformed at HTML")
 :::
 
 How To Use The Demo
@@ -127,3 +127,6 @@ t.color="black"
 
 $('div #html').innerText = htmlGenerated
 </script>
+<style>
+textarea{resize: unset}
+</style>
