--- a/en/scm-documentation/ascii-character-codes.html
+++ b/en/scm-documentation/ascii-character-codes.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
+```sb3
+0AD3: 0@v = string_format "Example %c" &lt;id&gt;
+```
+
 <table>
 <thead>
 <tr>
