--- a/es/coding/arrays.html
+++ b/es/coding/arrays.html
@@ -73,7 +73,7 @@ $array($index,10) = 1
 
 ## Declaración de Arreglo
 
-Los arreglos se pueden declarar utilizando el constructor [`VAR..END`](variables.md#var-end-construct):\
+Los arreglos se pueden declarar utilizando el constructor [`VAR..END`](variables.md#constructor-var..end):\
 `var`\
 `   <nombre>: array <tamaño> of <tipo>`\
 `end`
@@ -107,7 +107,7 @@ end
 $FloatArray[1] += 100.0
 ```
 
-Se puede acceder a los elementos de un arreglo que contiene [cadenas literarias](data-types.md#string-literals) con [variables de cadena](data-types.md#string-variables):
+Se puede acceder a los elementos de un arreglo que contiene [cadenas literarias](data-types.md#cadenas-literarias) con [variables de cadena](data-types.md#variables-de-cadenas):
 
 ```sb3
 // initializing first three elements of the $strings array
@@ -116,7 +116,7 @@ s$strings[1] = 'str2'
 s$strings[2] = 'str3'
 ```
 
-Un arreglo se puede declarar como una colección de [instancias de clase](classes.md#class-instances):
+Un arreglo se puede declarar como una colección de [instancias de clase](classes.md#instancias-de-clase):
 
 ```sb3
 var
@@ -127,7 +127,7 @@ $players[0].Build
 
 {% hint style="info" %}
 
-Por predeterminado, en el [modo de edición](../edit-modes/) de `GTA SA`, el desensamblador imprime los elementos del arreglo con los números como índices. La misma función está en LCS y VCS, pero desactivada de forma predeterminada. Puede activar y desactivar esta función mediante la opción de depuración `CONSTANT_INDEXES`.
+Por predeterminado, en el [modo de edición](../edit-modes/README.md) de `GTA SA`, el desensamblador imprime los elementos del arreglo con los números como índices. La misma función está en LCS y VCS, pero desactivada de forma predeterminada. Puede activar y desactivar esta función mediante la opción de depuración `CONSTANT_INDEXES`.
 {% endhint %}
 
 <script src="../../js/main.min.js"></script>
