--- a/es/coding/constants.html
+++ b/es/coding/constants.html
@@ -11,7 +11,7 @@
 
 Una **constante** es un identificador con un valor predefinido. A diferencia de una variable, el valor de la constante no se puede cambiar en tiempo de ejecución. En tiempo de compilación, la constante se reemplaza por el valor asociado a ella. El valor de la constante puede ser numérico (números, [nombres de modelo](data-types.md#model-names) o [etiquetas](data-types.md#labels)) y una cadena (literales de cadena), y contener un expresión.
 
-Las constantes se declaran estática o dinámicamente. Cada [modo de edición](../editor/edit-modes/README.md) uede cargar definiciones de constantes estáticas desde un archivo usando el parámetro `<constants>` en el `modes.xml`. Las declaraciones dinámicas se crean en el código del script con la sintaxis que se describe a continuación.
+Las constantes se declaran estática o dinámicamente. Cada [modo de edición](../edit-modes/README.md) uede cargar definiciones de constantes estáticas desde un archivo usando el parámetro `<constants>` en el `modes.xml`. Las declaraciones dinámicas se crean en el código del script con la sintaxis que se describe a continuación.
 
 ## Sintaxis
 
