--- a/en/editor/cli.html
+++ b/en/editor/cli.html
@@ -37,7 +37,7 @@ sanny.exe --debug 110000
 
 ## --game
 
-`--game &lt;game&gt;` - selects the [default mode](../edit-modes/#type) for the given game. Known `game` values are:
+`--game &lt;game&gt;` - selects the [default mode](../../edit-modes/README.md#type) for the given game. Known `game` values are:
 
 * `gta3`
 * `vc`
@@ -55,7 +55,7 @@ sanny.exe --game sa
 
 ## --mode
 
-`--mode &lt;id&gt;` - selects the mode by `id`. [Modes](../edit-modes/) and their ids are defined in the `modes.xml` file.
+`--mode &lt;id&gt;` - selects the mode by `id`. [Modes](../../edit-modes/README.html) and their ids are defined in the `modes.xml` file.
 
 Shortcut: `-m`
 
@@ -73,7 +73,7 @@ sanny.exe --no-splash
 
 ## -x
 
-`-x &lt;file path&gt;` - sets the path to the file with the [edit modes](../edit-modes/) configuration
+`-x &lt;file path&gt;` - sets the path to the file with the [edit modes](../../edit-modes/README.md) configuration
 
 ```
 sanny.exe -x ..\my-modes.xml
