--- a/en/editor/options/general.html
+++ b/en/editor/options/general.html
@@ -104,7 +104,7 @@ If this option is checked the compiler adds extra information at the end of the 
 * [HEX..END](../../coding/hex..end.md) constructs offsets
 * [global variables](../../coding/variables.md#global-variables) names
 * full source code (use [$NOSOURCE](../../coding/directives.md#usdnosource) to disable)
-* current [edit mode](../../edit-modes/)
+* current [edit mode](../../../edit-modes/README.md)
 
 {% hint style="info" %}
 The file compiled with the extra information can not be open in Sanny Builder prior to v3.00 (unless the `ignore_unknown` [option](../console.md#ignore_unknown) is enabled).
