--- a/en/editor/options/theme-editor.html
+++ b/en/editor/options/theme-editor.html
@@ -34,7 +34,7 @@ Available `style` elements are: **B** – bold, **I** – italic, **U** – unde
 * [Labels](../../coding/data-types.md) – identifiers starting with `@`
 * [Variables](../../coding/variables.md) – identifiers starting with `$` (global variables), or ending with `@` (local variables)\
   Also the [aDMA](../../coding/data-types.md) type (starts with `&`) and [arrays](../../coding/arrays.md) are highlighted as variables.
-* [Keywords](../../coding/keywords.md) – the special words stored in the file `keywords.ini` (one for all [edit modes](../../edit-modes/)) and a file`keywords.txt` (one per edit mode)
+* [Keywords](../../coding/keywords.md) – the special words stored in the file `keywords.ini` (one for all [edit modes](../../../edit-modes/README.html)) and a file`keywords.txt` (one per edit mode)
 * Numbers – integer and floating-point numbers
 * Strings – a text between double quotes `" "` or single quotes `' '`
 * Models – identifiers starting with `#`
