--- a/es/edit-modes/code-templates.html
+++ b/es/edit-modes/code-templates.html
@@ -21,7 +21,7 @@ end // for
 
 ## Types of Templates
 
-There are two types of templates: _shared_ and _exclusive_. Shared templates are available across all [edit modes](./). They are contained in the file `data\templates.txt`. Exclusive templates are designed specifically for the current edit mode. A path to the exclusive template file can be customized with the [`template`](./#templates) key in the `modes.xml`:
+There are two types of templates: _shared_ and _exclusive_. Shared templates are available across all [edit modes](README.md). They are contained in the file `data\templates.txt`. Exclusive templates are designed specifically for the current edit mode. A path to the exclusive template file can be customized with the [`template`](README.md/#templates) key in the `modes.xml`:
 
 ```
 &lt;templates type="default">@sb:\data\gta3\templates.txt&lt;/templates>
