--- a/es/editor/features.html
+++ b/es/editor/features.html
@@ -15,7 +15,7 @@ Sanny Builder provides the end-user the following features:
 
 Sanny Builder Library is a community-driven portal aiming to document all known scripting commands used in GTA III, Vice City and San Andreas. You can find it here: [library.sannybuilder.com](https://library.sannybuilder.com)
 
-Starting with v3.8.0 Sanny Builder uses library's files to provide brief descriptions to all opcodes directly in the IDE complimentary to the [Show opcode info](#Displaying Information about Opcode) feature. Those files are controlled with the new `&lt;library&gt;` parameter in the [edit mode configuration](../edit-modes/README.md#library).
+Starting with v3.8.0 Sanny Builder uses library's files to provide brief descriptions to all opcodes directly in the IDE complimentary to the [Show opcode info](#Displaying Information about Opcode) feature. Those files are controlled with the new `&lt;library&gt;` parameter in the [edit mode configuration](../../edit-modes/README.md#library).
 
 Double-clicking the opcode description in the status bar opens the library's page with this opcode's full description in the browser.
 
@@ -60,7 +60,7 @@ These shortcuts can be redefined in the [options](options/hotkeys.md).
 When the [option](options/editor.md#editor-configuration) `Show opcode info` is enabled the bottom bar displays:
 
 * a number of parameters for the current opcode;
-* a model ID when the cursor is on the [model name](../coding/data-types.md#model-names) and `IDE` files for the current [edit mode](../edit-modes/#ide) have been loaded;
+* a model ID when the cursor is on the [model name](../coding/data-types.md#model-names) and `IDE` files for the current [edit mode](../../edit-modes/README.md#ide) have been loaded;
 * a constant value when the cursor is on the constant name and the [language service](language-service.md) is enabled.
 * a brief description what this command does (from [Sanny Builder Library](features.md#integration-with-sanny-builder-library))
 
@@ -131,7 +131,7 @@ Additionally, you can use [navigate](features.md#navigate-to-symbol) to the miss
 
 ## Custom Mission Titles
 
-Since v3.2.0 Sanny supports custom mission titles for each available [edit mode](../edit-modes/#missions). They are stored in the `missions.txt` file. This file is used by the disassembler to add the title as a comment on line with mission define (`DEFINE MISSION`) or start (`mission_start`) command. 
+Since v3.2.0 Sanny supports custom mission titles for each available [edit mode](../../edit-modes/README.md#missions). They are stored in the `missions.txt` file. This file is used by the disassembler to add the title as a comment on line with mission define (`DEFINE MISSION`) or start (`mission_start`) command. 
 
 If a `SCM` file contains custom-made missions you may edit the `missions.txt` to have the correct titles after disassembling.
 
