--- a/es/editor/hotkeys.html
+++ b/es/editor/hotkeys.html
@@ -37,7 +37,7 @@ Sanny Builder supports many common shortcuts for the file and text operations (`
 </tr>
 <tr>
 <td> `F8` *</td>
-<td>run the game for the current [edit mode](../edit-modes/)</td>
+<td>run the game for the current [edit mode](../../edit-modes/README.md)</td>
 </tr>
 <tr>
 <td> `F10`</td>
@@ -161,11 +161,11 @@ Sanny Builder supports many common shortcuts for the file and text operations (`
 </tr>
 <tr>
 <td> `F2`</td>
-<td>use the word under the cursor to expand to the <a href="../edit-modes/code-templates.md">code template</a> with the same name</td>
+<td>use the word under the cursor to expand to the <a href="../../edit-modes/code-templates.md">code template</a> with the same name</td>
 </tr>
 <tr>
 <td> `Ctrl`+`J`</td>
-<td>show the list of <a href="../edit-modes/code-templates.md">code templates</a></td>
+<td>show the list of <a href="../../edit-modes/code-templates.md">code templates</a></td>
 </tr>
 <tr>
 <td> `Ctrl`+`M`</td>
