--- a/es/scm-documentation/sa/particles.html
+++ b/es/scm-documentation/sa/particles.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="../../../style/style.css">
 </head>
 <body>
+```sb3
+064B: 0@ = create_particle &lt;id&gt; at X Y Z type 1
+```
 <table>
 <thead>
 <tr>
