--- a/en/edit-modes/customlabels.ini.html
+++ b/en/edit-modes/customlabels.ini.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
@@ -19,4 +19,4 @@ If the disassembler finds a label at the specified offset, this label gets the c
 
 To find out offset values enable the `CODE_OFFSETS` debug [option](../editor/console.md#code_offsets). After disassembling, a number in front of the script instruction is the offset value.
 
-<script src="../../../js/main.min.js"></script>
+<script src="../../js/main.min.js"></script>
