--- a/en/edit-modes/enums.txt.html
+++ b/en/edit-modes/enums.txt.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
@@ -132,4 +132,4 @@ end
 ```
 </div>
 
-<script src="../../../js/main.min.js"></script>
+<script src="../../js/main.min.js"></script>
