--- a/en/edit-modes/extensions.html
+++ b/en/edit-modes/extensions.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
@@ -95,4 +95,4 @@ Sanny Builder ships some common and recognized extensions for different edit mod
 
 Using opcodes from the third-party libraries not listed there is possible, the compiler will not require the `{$USE}` directive.
 
-<script src="../../../js/main.min.js"></script>
+<script src="../../js/main.min.js"></script>
