--- a/es/edit-modes/README.html
+++ b/es/edit-modes/README.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
@@ -270,4 +270,4 @@ To select the mode using CLI run Sanny Builder with the `--mode` [option](../edi
 
 Running Sanny Builder with the `-x` [option](../editor/cli.md#x) allows loading the modes configuration from a file different from the default `modes.xml`. If Sanny Builder is already running, it reloads the configuration and updates the list of modes.
 
-<script src="../../../js/main.min.js"></script>
+<script src="../../js/main.min.js"></script>
