--- a/es/edit-modes/code-templates.html
+++ b/es/edit-modes/code-templates.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
@@ -54,4 +54,4 @@ The option to save a template only for current mode becomes available if `modes.
 A template with the name `CLEO` unlocks the "New CLEO Script..." item in the main menu. The editor uses this template as the content for a newly created file.
 {% endhint %}
 
-<script src="../../../js/main.min.js"></script>
+<script src="../../js/main.min.js"></script>
