--- a/es/edit-modes/opcodes-list-scm.ini.html
+++ b/es/edit-modes/opcodes-list-scm.ini.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
@@ -147,4 +147,4 @@ A letter following the index number indicates the parameter type.
 You can freely change parameters types, if needed.
 {% endhint %}
 
-<script src="../../../js/main.min.js"></script>
+<script src="../../js/main.min.js"></script>
