--- a/es/errors.html
+++ b/es/errors.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html>
 <head>
 	<title>Error Messages</title>
 	<meta charset="utf-8">
@@ -108,9 +108,9 @@ If you are unable to resolve the issue with the given instructions or get an unh
 
 #### [0001][]0001: INI file not found
 
-Sanny Builder can't find [the opcodes definitions file](editor/edit-modes/opcodes-list-scm.ini.md). The compiler can not work without it.
+Sanny Builder can't find [the opcodes definitions file](edit-modes/opcodes-list-scm.ini.md). The compiler can not work without it.
 
-**Possible solutions:** check if the file set in the edit mode [configuration](editor/edit-modes/README.md#opcodes) exists.
+**Possible solutions:** check if the file set in the edit mode [configuration](edit-modes/README.md#opcodes) exists.
 
 ---
 
